<resources>
    <string name="app_name">Laboratorio05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harry_potter_y_la_piedra_filosofal">Harry potter y la Piedra Filosofal</string>
    <string name="star_wars_episodio_3_la_venganza_de_los_sith">Star wars episodio 3: La venganza de los Sith</string>
    <string name="ciencia_ficcion">ciencia ficcion</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="_9_8">9.8</string>
    <string name="star_wars_episodio_3_la_venganza_de_los_sithffff">Star wars episodio 3 la venganza de los sith</string>
    <string name="new_movie">New movie</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="calification">Calification</string>
    <string name="gsdgc">SUBMIT</string>
</resources>