<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_movie"
        android:textSize="@dimen/dfsdaf"
        android:textAlignment="center"
        android:textColor="@color/white"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_margin="@dimen/dsfasdf"
        android:textColorHint="@color/white"
        android:background="@color/cardLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        android:layout_margin="@dimen/sdfasdffg"
        android:textColorHint="@color/white"
        android:background="@color/cardLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField3"
        android:layout_margin="@dimen/jkhjk"
android:background="@color/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField4"
        android:layout_margin="@dimen/gfhfg"
        android:textColorHint="@color/white"
        android:background="@color/cardLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calification"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:backgroundTint="@color/buttonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gsdgc"
        />

</LinearLayout>